# ai-learn

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
ai-research/: README.md  accomplishment_hallucination_article_summary.md  foundations_behavioral_configuration_artifacts.md  foundations_embeddings_and_vector_search.md  foundations_from_llms_to_gpts.md  foundations_from_neural_nets_to_llms.md  foundations_prompt_engineering.md  foundations_reasoning.md  foundations_structured_output.md  foundations_tool_calling.md  how_llms_write_code.md  how_modern_llms_work.md  tools_for_thoughtful_ai_use.md
ai-research/wip/: accomplishment_hallucination_article_summary.md  tools_for_thoughtful_ai_use.md
deeplearning-ai-dev-2025/: README.md  andrew_ng_keynote_summary.md  context_engineering_highlights.md
docs/: LICENSE  external-assets.md  license.md
eng-dev-patterns/: AGENTS.md  README.md  embeddings_and_vector_search.md  function_calling_tool_use.md  learning_progression.md  llm_vs_reasoning_problems.md  prompt_engineering.md  schema_driven_inference.md  structured_output.md  understanding_models.md
mw2/: .env.example  README.md  alembic.ini
mw2/docker/: README.md  mw2.Dockerfile  requirements.txt
mw2/docs/: ARCHITECTURE.md  k8s_local.md
mw2/k8s/base/: kustomization.yaml  namespace.yaml
mw2/k8s/scripts/: build-postgres-image.sh  postgres-init.sh
mw2/scripts/: build-and-deploy.sh  build-mw2.sh  build-postgres-image.sh  deploy.sh  fix-dependencies.sh  restart.sh
mw2/src/: README.md
mw2/src/app/: __init__.py  __main__.py  config.py
mw2/src/config/: __init__.py  settings.py
mw2/src/rqworker/: __init__.py  __main__.py
mw2/src/utils/: pgd.py  redis.py
scripts/examples/: AGENTS.md  README.md  embeddings_vector_search.py  language_assessment_structured_output.py  pg_vector_search.py  schema_driven_translation.py  system_prompt_example.py  tool_use_patterns.py  understand_embedding_models.md  understand_embedding_models.py  understand_llm_models.md  understand_llm_models.py  understand_reasoning_model.md  understand_reasoning_model.py  utils.py
scripts/examples/db/: __init__.py  docker-compose.yml
src/: AGENTS.md  README.md  embeddings_vector_search.md  embeddings_vector_search.py  language_assessment_structured_output.py  pg_vector_search.py  prompts.py  schema_driven_translation.py  structured_output_example.py  system-role-example.py  system_prompt_example.py  tool_use_example.py  tool_use_patterns.py  translation.py  understand_embedding_models.md  understand_embedding_models.py  understand_llm_models.md  understand_llm_models.py  understand_reasoning_model.md  understand_reasoning_model.py  utils.py
src/db/: Dockerfile  init-pgvector.sql  pg_user.md  postgres_pgvector_notes.md  utils.py
src/examples/: AGENTS.md  README.md  embeddings_vector_search.md  pg_vector_search.py  schema_driven_translation.py  tool_use_patterns.py  understand_embedding_models.md  understand_embedding_models.py  understand_llm_models.md  understand_reasoning_model.md
src/scripts/examples/: AGENTS.md  README.md  pg_vector_search.py  understand_embedding_models.md  understand_llm_models.md  (+1 more)
t7e/: .env.example  README.md
t7e/docker/: README.md  postgres-pgvector.Dockerfile
t7e/docs/: ARCHITECTURE.md  k8s-local-dev-setup.md  k8s_local.md
t7e/src/: README.md  __init__.py
(+94 files in other folders)
