[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learn"
version = "0.1.0"
description = "AI learning, experiments and tools"
authors = [
    {name = "Mike Wilson"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.48.0",  # Required for beta.chat.completions.parse() and structured outputs
    "pytest",
    "black",
    "ruff",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
