[metadata]
name = aistuff
version = 0.1.0
description = AI experiments and tools
author = mike
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
python_requires = >=3.10
# Dependencies are defined in pyproject.toml
